[package]
name = "eth_checksum"
version = "0.1.1"
authors = ["Miguel Mota <hello@miguelmota.com>"]
description = "Ethereum address checksum"
readme = "README.md"
license = "MIT"
repository = "https://github.com/miguelmota/rust-eth-checksum"

[dependencies]
regex = "1"
rust-crypto = "0.2"

[[bin]]
name = "eth_checksum"
path = "src/bin/main.rs"
